Refactor LibraryManager and URLClassLoaderHelper to use URI for URL connections; enhance type safety in TransitiveDependencyHelper